--- a/FoodOrderingApp-api/src/main/resources/application.yaml
+++ b/FoodOrderingApp-api/src/main/resources/application.yaml
@@ -26,8 +26,6 @@ spring:
 
   logging:
       level:
-          org:
-            hibernate:
-              type: trace
-
+          org.hibernate.SQL: DEBUG
+          org.hibernate.type: TRACE
 
