Added order and payment controller. Made changes in address as per test cases.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ FoodOrderingApp-api/target
 FoodOrderingApp-db/target
 FoodOrderingApp-service/target
 
+FoodOrderingApp-db/src/main/resources/config/localhost.properties
+FoodOrderingApp-api/src/main/resources/application.yaml
+
 
 
 
